<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical">
   <TextView
            android:id="@+id/townCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/town"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/dateCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/date_current"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="@+id/townCurrent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="@+id/townCurrent"
            app:layout_constraintTop_toBottomOf="@+id/townCurrent" />

        <TextView
            android:id="@+id/timeCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_current"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/dateCurrent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/dateCurrent"
            app:layout_constraintTop_toBottomOf="@+id/dateCurrent" />

    <ImageView
        android:id="@+id/imageTemperature"
        android:layout_width="183dp"
        android:layout_height="129dp"
        android:contentDescription="@string/imageContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeCurrent"
        app:srcCompat="@drawable/sun" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/temperatureCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.356"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageTemperature"
                app:layout_constraintVertical_bias="0.0" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtWindSpeed"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageTemperature"
                    app:layout_constraintStart_toEndOf="@+id/temperatureCurrent"
                    tools:layout_editor_absoluteY="356dp" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/txtPressure"
                    tools:layout_editor_absoluteX="243dp"
                    tools:layout_editor_absoluteY="385dp" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>